kubernetes/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      restartPolicy: Always
      containers:
      - name: elasticsearch
        image: devopsgreenhouse/elasticsearch:dev
        imagePullPolicy: Always
        volumeMounts:
        - name: pvc-elasticsearch
          mountPath: /usr/share/elasticsearch/data
          subPath: elasticsearch
      volumes:
        - name: pvc-elasticsearch
          persistentVolumeClaim:
            claimName: pvc-elasticsearch

---

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: NodePort
  ports:
  - name: rest
    port: 9200
  - name: nodes
    port: 9300
  selector:
    app: elasticsearch
