kubernetes/hystrix-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hystrix-dashboard
spec:
  selector:
    matchLabels:
      app: hystrix-dashboard
  template:
    metadata:
      labels:
        app: hystrix-dashboard
    spec:
      restartPolicy: Always
      containers:
      - name: hystrix-dashboard
        image: devopsgreenhouse/hystrix-dashboard:dev
        imagePullPolicy: Always
        volumeMounts:
        - name: pvc-logs-hystrix-dashboard
          mountPath: /logs-hystrix-dashboard
          subPath: hystrix-dashboard
      volumes:
        - name: pvc-logs-hystrix-dashboard
          persistentVolumeClaim:
            claimName: pvc-logs-hystrix-dashboard

---

apiVersion: v1
kind: Service
metadata:
  name: hystrix-dashboard
spec:
  type: NodePort
  ports:
  - port: 7979
  selector:
    app: hystrix-dashboard
