kubernetes/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      restartPolicy: Always
      containers:
      - name: kibana
        image: devopsgreenhouse/kibana:dev
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  type: NodePort
  ports:
  - port: 5601
  selector:
    app: kibana
