kubernetes/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      restartPolicy: Always
      containers:
      - name: mongo
        image: mongo
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: NodePort
  ports:
  - port: 27017
  selector:
    app: mongo
