kubernetes/payment-distribution.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-distribution
spec:
  selector:
    matchLabels:
      app: payment-distribution
  template:
    metadata:
      labels:
        app: payment-distribution
    spec:
      restartPolicy: Always
      containers:
      - name: payment-distribution
        image: devopsgreenhouse/payment-distribution:dev
        imagePullPolicy: Always
        volumeMounts:
        - name: pvc-logs-payment-distribution
          mountPath: /logs-payment-distribution
          subPath: payment-distribution
      volumes:
        - name: pvc-logs-payment-distribution
          persistentVolumeClaim:
            claimName: pvc-logs-payment-distribution

---

apiVersion: v1
kind: Service
metadata:
  name: payment-distribution
spec:
  type: NodePort
  ports:
  - port: 8003
    targetPort: 80
  selector:
    app: payment-distribution
