kubernetes/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      restartPolicy: Always
      containers:
      - name: payment-service
        image: devopsgreenhouse/payment-service:dev
        imagePullPolicy: Always
        volumeMounts:
        - name: pvc-logs-payment-service
          mountPath: /logs-payment-service
          subPath: payment-service
      volumes:
        - name: pvc-logs-payment-service
          persistentVolumeClaim:
            claimName: pvc-logs-payment-service

---

apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: NodePort
  ports:
  - port: 8004
    targetPort: 80
  selector:
    app: payment-service
