kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: order-complete-updater.com
    http:
      paths:
      - path: /
        backend:
          serviceName: order-complete-updater
          servicePort: 8005
  - host: order-service.com
    http:
      paths:
      - path: /
        backend:
          serviceName: order-service
          servicePort: 8002
  - host: payment-distribution.com
    http:
      paths:
      - path: /
        backend:
          serviceName: payment-distribution
          servicePort: 8003
  - host: payment-service.com
    http:
      paths:
      - path: /
        backend:
          serviceName: payment-service
          servicePort: 8004
  - host: restaurant-service.com
    http:
      paths:
      - path: /
        backend:
          serviceName: restaurant-service
          servicePort: 8001
  - host: hystrix-dashboard.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hystrix-dashboard
          servicePort: 7979
  - host: kibana-service.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
  - host: logstash-service.com
    http:
      paths:
      - path: /
        backend:
          serviceName: logstash
          servicePort: 9600
